force-app/main/default/objects/Opportunity__c/Opportunity__c.object-meta.xml
<CustomObject>
    <description>Custom clone of the standard Opportunity object.</description>
    <label>取引</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>