force-app/main/default/objects/Opportunity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>商談</relationshipLabel>
    <relationshipName>CustomOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>