force-app/main/default/objects/Opportunity__c/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <label>ACV</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>