force-app/main/default/objects/Opportunity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>クライアント担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>商談 (Contact)</relationshipLabel>
    <relationshipName>CustomContactOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>