force-app/main/default/objects/Opportunity__c/fields/ContractStartMonth__c.field-meta.xml
<CustomField>
    <fullName>ContractStartMonth__c</fullName>
    <description>契約開始日をYYYY/MM形式で表示するレポート集計用項目</description>
    <formula>IF(
    ISBLANK(StartDate__c),
    &quot;&quot;,
    TEXT(YEAR(StartDate__c)) &amp; &quot;/&quot; &amp;
    RIGHT(&quot;0&quot; &amp; TEXT(MONTH(StartDate__c)), 2)
)</formula>
    <label>契約開始月</label>
    <type>Text</type>
</CustomField>