force-app/main/default/objects/Opportunity__c/fields/ContractUpdate__c.field-meta.xml
<CustomField>
    <fullName>ContractUpdate__c</fullName>
    <label>契約更新</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>月</fullName>
            </value>
            <value>
                <fullName>年</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>