force-app/main/default/objects/Opportunity__c/fields/CsStage__c.field-meta.xml
<CustomField>
    <fullName>CsStage__c</fullName>
    <description>Rendery Enterprise受注後のカスタマーサクセス進捗を管理する。</description>
    <label>CS進捗</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S1</fullName>
                <label>S1 導入直後</label>
            </value>
            <value>
                <fullName>S2</fullName>
                <label>S2 初期定着</label>
            </value>
            <value>
                <fullName>S3</fullName>
                <label>S3 活用拡張</label>
            </value>
            <value>
                <fullName>S4</fullName>
                <label>S4 安定</label>
            </value>
            <value>
                <fullName>S5</fullName>
                <label>S5 リスク</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>