force-app/main/default/objects/Opportunity__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>イベント</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>商談</relationshipLabel>
    <relationshipName>Event3</relationshipName>
    <type>Lookup</type>
</CustomField>