force-app/main/default/objects/Opportunity__c/fields/ExpectedCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedCloseDate__c</fullName>
    <label>完了予定日</label>
    <type>Date</type>
</CustomField>