force-app/main/default/objects/Opportunity__c/fields/ExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRevenue__c</fullName>
    <description>ARRベースの期待収益</description>
    <formula>ARR__c  * StandardProbability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>期待収益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>