force-app/main/default/objects/Opportunity__c/fields/HearingStatus__c.field-meta.xml
<CustomField>
    <fullName>HearingStatus__c</fullName>
    <label>ヒアリングステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>社内検討中</fullName>
            </value>
            <value>
                <fullName>初回打合せ完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>