force-app/main/default/objects/Opportunity__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>OR(ISPICKVAL(StageName__c, &quot;Closed Won&quot;), ISPICKVAL(StageName__c, &quot;Closed Lost&quot;))</formula>
    <label>完了フラグ</label>
    <type>Checkbox</type>
</CustomField>