force-app/main/default/objects/Opportunity__c/fields/IsWon__c.field-meta.xml
<CustomField>
    <fullName>IsWon__c</fullName>
    <formula>ISPICKVAL(StageName__c, &quot;Closed Won&quot;)</formula>
    <label>勝利フラグ</label>
    <type>Checkbox</type>
</CustomField>