force-app/main/default/objects/Opportunity__c/fields/LostDate__c.field-meta.xml
<CustomField>
    <fullName>LostDate__c</fullName>
    <label>失注日</label>
    <type>Date</type>
</CustomField>