force-app/main/default/objects/Opportunity__c/fields/LostReason__c.field-meta.xml
<CustomField>
    <fullName>LostReason__c</fullName>
    <label>失注理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of scope</fullName>
                <label>対象外(競合や営業など)</label>
            </value>
            <value>
                <fullName>No agreement on issue or setup</fullName>
                <label>課題の設定・合意形成ができていない</label>
            </value>
            <value>
                <fullName>Customer concern unresolved</fullName>
                <label>顧客の疑問や不安を解消できていない</label>
            </value>
            <value>
                <fullName>Needs mismatch</fullName>
                <label>ニーズとのミスマッチ</label>
            </value>
            <value>
                <fullName>Key person unreachable</fullName>
                <label>キーパーソンにアプローチできていない</label>
            </value>
            <value>
                <fullName>Budget shortage - running cost</fullName>
                <label>予算不足（ランニング）</label>
            </value>
            <value>
                <fullName>Budget shortage - initial or migration cost</fullName>
                <label>予算不足(初期費用・移行コスト)</label>
            </value>
            <value>
                <fullName>Competitor comparison</fullName>
                <label>他社比較</label>
            </value>
            <value>
                <fullName>Timing mismatch</fullName>
                <label>時期ずれ</label>
            </value>
            <value>
                <fullName>Support or track record concern</fullName>
                <label>サポート体制・実績不足</label>
            </value>
            <value>
                <fullName>No response or other reason</fullName>
                <label>返信なし *なるべく他の理由に</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>