force-app/main/default/objects/Opportunity__c/fields/NextActivityDate__c.field-meta.xml
<CustomField>
    <fullName>NextActivityDate__c</fullName>
    <label>次回アクティビティ日</label>
    <type>Date</type>
</CustomField>