force-app/main/default/objects/Opportunity__c/fields/NextStep__c.field-meta.xml
<CustomField>
    <fullName>NextStep__c</fullName>
    <label>次のステップ</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>