force-app/main/default/objects/Opportunity__c/fields/PlanCategory__c.field-meta.xml
<CustomField>
    <fullName>PlanCategory__c</fullName>
    <label>プランカテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>