force-app/main/default/objects/Opportunity__c/fields/Pricebook2__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>価格表</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>商談</relationshipLabel>
    <relationshipName>CustomOpportunityPricebooks</relationshipName>
    <type>Lookup</type>
</CustomField>