force-app/main/default/objects/Opportunity__c/fields/ProposalStatus__c.field-meta.xml
<CustomField>
    <fullName>ProposalStatus__c</fullName>
    <label>提案ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>トライアル中</fullName>
            </value>
            <value>
                <fullName>導入意向</fullName>
            </value>
            <value>
                <fullName>提案作成済み</fullName>
            </value>
            <value>
                <fullName>提案済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>