force-app/main/default/objects/Opportunity__c/fields/SourceChannel__c.field-meta.xml
<CustomField>
    <fullName>SourceChannel__c</fullName>
    <label>受注チャネル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
                <label>展示会/イベント</label>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
                <label>広告</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <label>リファラル</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>