force-app/main/default/objects/Opportunity__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>ステージ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
                <label>初回接点</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
                <label>商談化</label>
            </value>
            <value>
                <fullName>NeedsAnalysis</fullName>
                <label>課題ヒアリング</label>
            </value>
            <value>
                <fullName>ValueProposition</fullName>
                <label>提案</label>
            </value>
            <value>
                <fullName>Negotiation</fullName>
                <label>交渉</label>
            </value>
            <value>
                <fullName>Applove</fullName>
                <label>承認</label>
            </value>
            <value>
                <fullName>Closed Won</fullName>
                <label>受注</label>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <label>失注</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>