force-app/main/default/objects/Opportunity__c/fields/StandardCloseDate__c.field-meta.xml
<CustomField>
    <fullName>StandardCloseDate__c</fullName>
    <label>取引終了日</label>
    <type>Date</type>
</CustomField>