force-app/main/default/objects/Opportunity__c/fields/StandardProbability__c.field-meta.xml
<CustomField>
    <fullName>StandardProbability__c</fullName>
    <label>確度(%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>