force-app/main/default/objects/Opportunity__c/fields/StandardStartDate__c.field-meta.xml
<CustomField>
    <fullName>StandardStartDate__c</fullName>
    <label>取引作成日</label>
    <type>Date</type>
</CustomField>