force-app/main/default/objects/Opportunity__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>商品の利用井開始日</description>
    <label>契約開始日</label>
    <type>Date</type>
</CustomField>