force-app/main/default/objects/Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>ACV__c</columns>
    <columns>ARR__c</columns>
    <columns>MRR__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>