force-app/main/default/objects/Opportunity__c/listViews/remaind.listView-meta.xml
<ListView>
    <fullName>remaind</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>リマインド取引</label>
</ListView>