force-app/main/default/objects/Opportunity__c/listViews/RenderyCsManagement.listView-meta.xml
<ListView>
    <fullName>RenderyCsManagement</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ProductCategory__c</columns>
    <columns>PlanCategory__c</columns>
    <columns>AccountCount__c</columns>
    <columns>StageName__c</columns>
    <columns>CsStage__c</columns>
    <columns>StartDate__c</columns>
    <columns>MRR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductCategory__c</field>
        <operation>equals</operation>
        <value>Rendery</value>
    </filters>
    <filters>
        <field>PlanCategory__c</field>
        <operation>equals</operation>
        <value>Enterprise</value>
    </filters>
    <filters>
        <field>StageName__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <label>Rendery CS管理</label>
</ListView>